--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>hw10</title>
+        <title>Do You Wanna Build A Snowman?</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
@@ -99,6 +99,7 @@
         <!-- endbuild -->
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
+        <script src="scripts/jquery-1.11.0.min.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
