--- a/app/start.html
+++ b/app/start.html
@@ -45,23 +45,37 @@
                     <li>
                         <img src="images/wizard.jpg" alt="" class="img-rounded">
                         <div class="heroActions">
-                            <button type="button" class="btn btn-success btn-sm btn-block">You've Chosen Well! Let's go!</button>
-                            <div class="wizard">
-                                <button>attack</button>
+                            <button type="button" class="go btn btn-success btn-sm btn-block">You've Chosen Well! Let's go!</button>
+                            <div class="wizardStep1" style="display:none">
                                 <img src="images/ghost.jpg">
                                 <p class="bg-danger"> A Ghost Appears! You engage in battle! </p>
+                                <button type="button" class="attackWiz btn btn-danger btn-sm btn-block">Attack!</button>
                             </div>
-                            <div class="nextDiv show">
-                                
-                            </div>
+                           <!--  <div class="wizardstep2">
+                                <button type="button" class="attackGhost btn btn-warning btn-sm btn-block">Another Ghost Appears!! Defend!</button>
+                            </div> -->
 
                         </div>
                     </li>
 
                        <li> <img src="images/barb.jpg" alt="" class="img-circle">
-                       <div class="heroActions"><a class="btn btn-danger barb" href="#" role="button">Begin Quest</a></div></li>
-                        <li><img src="images/demonhunt.jpg" alt="..." class="img-thumbnail">
-                        <div class="heroActions"><a class="btn btn-danger demonhunt" href="#" role="button">Begin Quest</a></div></li>
+                       <div class="heroActions">
+                            <button type="button" class="go btn btn-success btn-sm btn-block">You've Chosen Well! Let's go!</button>
+                            <div class="barbStep1" style="display:none">
+                                <img src="images/succubus.jpg">
+                                <p class="bg-danger"> A Succubus Appears! You engage in battle! </p>
+                                <button type="button" class="attackBarb btn btn-danger btn-sm btn-block">Attack!</button>
+                            </div>
+                    </li>
+
+                        <li><img src="images/demonhunt.jpg" alt="" class="img-thumbnail">
+                        <div class="heroActions">
+                            <button type="button" class="go btn btn-success btn-sm btn-block">You've Chosen Well! Let's go!</button>
+                            <div class="DemonStep1" style="display:none">
+                                <img src="images/werewolf.jpg">
+                                <p class="bg-danger"> A Werewolf Appears! You engage in battle! </p>
+                                <button type="button" class="attackDemon btn btn-danger btn-sm btn-block">Attack!</button>
+                        </div></li>
                     </ul>
                 </div></center>
             </div>
