Constructor Testing NEW

--- a/app/start.html
+++ b/app/start.html
@@ -138,9 +138,10 @@
         <!-- endbuild -->
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
-        <script src="scripts/jquery-1.11.0.min.js"></script>
-        <script src="scripts/main.js"></script>
-        <script src="scripts/start.js"></script>
+         <script src="scripts/jquery-1.11.0.min.js"></script>
+     <script src="scripts/main.js"></script>
+    <script src="scripts/start.js"></script>
+    <script src="spec/test.js"></script>
         <!-- endbuild -->
 </body>
 </html>
