--- a/test/index.html
+++ b/test/index.html
@@ -20,6 +20,10 @@
     <!-- include source files here... -->
 
     <!-- include spec files here... -->
+   
+    <script src="../app/scripts/jquery-1.11.0.min.js"></script>
+     <script src="../app/scripts/main.js"></script>
+    <script src="../app/scripts/start.js"></script>
     <script src="spec/test.js"></script>
 
     <script>mocha.run()</script>
